--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h2>Mis servicios</h2>
         <div class="servicios">
             <section class="servicio">
-                <h3>Diseño Web</h3>
+                <h3>Desarrollo Web</h3>
                 <div class="iconos">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40"
                         height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
@@ -61,7 +61,7 @@
                         <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
                     </svg>
                 </div>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, fugit.</p>
+                <p>Creamos tu pagina web adaptandola a lo que requieras.</p>
             </section>
 
             <section class="servicio">
@@ -80,7 +80,7 @@
                         <line x1="15" y1="18" x2="15" y2="21" />
                     </svg>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste ratione.</p>
+                <p>Realizamos tu aplicacion movil a tu gusto.</p>
             </section>
 
             <section class="servicio">
@@ -96,7 +96,7 @@
                         <line x1="11" y1="15" x2="13" y2="15" />
                     </svg>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima, reiciendis.</p>
+                <p>Realizamos tu tienda electronica dependiendo de tus necesidades.</p>
             </section>
         </div>
         <section>
